fix overflow

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,6 @@
   scroll-behavior: smooth;
   scrollbar-width: thin;
   scrollbar-color: #c41e3a transparent;
-  overflow-x: hidden;
 }
 
 /* Works on Chrome, Edge, and Safari */
